@@ -3,6 +3,7 @@ Version 1.0.1+svn:
  * fixed text savegames (as opposed to binary savegames) having wrong
  textdomain information, making the messages be displayed in English when
  loading levels (#4454).
+ * backport fix for Create Unit menu not being translated (#4424)
  * language and i18n:
    * updated translations: Afrikaans, Slovak
 
